<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/nongliXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/nongli"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/ganzhiXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ganzhi"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/jieqiXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/jieqi"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/jieriXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/jieri"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/shengxiaoXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/shengxiao"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/xingzuoXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/xingzuo"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/backgroud_rectangles_blue"
        android:text="@string/close"
        android:textColor="@color/white" />
</LinearLayout>