<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ConstellationFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/choose_constellation"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/constellation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constellation" />

    <TextView
        android:id="@+id/constellation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/backgroud_rectangles"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tomorrow"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tomorrow_show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tomorrow_show" />

    <CheckBox
        android:id="@+id/tomorrow_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:padding="10dp"
        android:text="@string/show"
        app:layout_constraintBottom_toBottomOf="@+id/tomorrow_hide"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/tomorrow_hide" />

    <CheckBox
        android:id="@+id/tomorrow_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/hide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tomorrow_show"
        app:layout_constraintTop_toBottomOf="@+id/constellation" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/week"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/week_show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/week_show" />

    <CheckBox
        android:id="@+id/week_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:padding="10dp"
        android:text="@string/show"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tomorrow_show" />

    <CheckBox
        android:id="@+id/week_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/hide"
        app:layout_constraintBottom_toBottomOf="@+id/week_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/week_show"
        app:layout_constraintTop_toTopOf="@+id/week_show" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/month"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/month_show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/month_show" />

    <CheckBox
        android:id="@+id/month_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:padding="10dp"
        android:text="@string/show"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/week_show" />

    <CheckBox
        android:id="@+id/month_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/hide"
        app:layout_constraintBottom_toBottomOf="@+id/month_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/month_show"
        app:layout_constraintTop_toTopOf="@+id/month_show" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/year"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/year_show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/year_show" />

    <CheckBox
        android:id="@+id/year_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:padding="10dp"
        android:text="@string/show"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/month_show" />

    <CheckBox
        android:id="@+id/show_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/hide"
        app:layout_constraintBottom_toBottomOf="@+id/year_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/year_show"
        app:layout_constraintTop_toTopOf="@+id/year_show" />

    <Button
        android:id="@+id/btn_constellation_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/backgroud_rectangles_blue"
        android:text="@string/read"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_show" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_constellation_query"
        tools:layout_editor_absoluteY="346dp" />

    <TextView
        android:id="@+id/constellation_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/constellation_today_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constellation_today" />


</android.support.constraint.ConstraintLayout>